# stackage-cli

./: .ghci  .gitignore  .travis.yml  ChangeLog.md  README.md  Setup.hs  stackage-cli.cabal
main/: Init.hs  Main.hs  Purge.hs  Sandbox.hs  StackageSetup.hs  Upgrade.hs
src/: Plugins.hs  SimpleOptions.hs
src/Module/: IO.hs  Parser.hs
src/Plugins/: Commands.hs
src/Stackage/: CLI.hs
stackage-cli/: Module.hs  SimpleOptions.hs  stackage-cli.cabal
stackage-cli/Module/: IO.hs  Parser.hs  Types.hs
stackage-cli/Stackage/: CLI.hs
stackage-cli/main/: Main.hs
stackage-init/: stackage-init.cabal
stackage-init/Stackage/CLI/: Init.hs
stackage-init/main/: Main.hs
stackage-purge/: stackage-purge.cabal
stackage-purge/Stackage/CLI/: Purge.hs
stackage-purge/main/: Main.hs
stackage-upgrade/: stackage-upgrade.cabal
stackage-upgrade/Stackage/CLI/: Upgrade.hs
stackage-upgrade/main/: Main.hs
