name:                stackage-cli
version:             0.1
synopsis:
  A CLI library for stackage commands
author:              Dan Burton
maintainer:          danburton@fpcomplete.com
copyright:           2015 FP Complete Corporation
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src/
  exposed-modules:
      Stackage.CLI
  other-modules:
      SimpleOptions
    , Plugins
    , Plugins.Commands
  build-depends:
      base >=4.7 && <5
    , text
    , conduit
    , optparse-applicative
    , process
    , transformers
    , split
    , filepath
    , directory
    , hashable
    , unordered-containers
    , exceptions
    , optparse-simple
    , either
  default-language:    Haskell2010

executable stackage
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
  default-language:    Haskell2010

executable stk
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
  default-language:    Haskell2010

executable stackage-init
  hs-source-dirs:      main
  main-is:             Init.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
    , system-fileio
    , optparse-applicative
    , http-client
    , http-types
    , bytestring
  default-language:    Haskell2010

executable stackage-purge
  hs-source-dirs:      main
  main-is:             Purge.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
    , system-fileio
    , optparse-applicative
    , process
    , parsec
    , exceptions
  default-language:    Haskell2010

executable stackage-upgrade
  hs-source-dirs:      main
  main-is:             Upgrade.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
    , system-fileio
    , optparse-applicative
  default-language:    Haskell2010

executable stackage-sandbox
  hs-source-dirs:      main
  main-is:             Sandbox.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
    , system-fileio
    , system-filepath
    , optparse-applicative
    , process
  default-language:    Haskell2010

executable stackage-setup
  hs-source-dirs:      main
  main-is:             StackageSetup.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
    , system-fileio
    , system-filepath
    , optparse-applicative
    , http-conduit
    , classy-prelude-conduit
    , unordered-containers
    , cryptohash
    , cryptohash-conduit
    , http-types
    , process
  default-language:    Haskell2010
