name:                stackage-cli
version:             0.1.0.2
synopsis:
  A CLI library for stackage commands
description:
  A CLI library for stackage commands
homepage:
  https://www.stackage.org/package/stackage-cli
bug-reports:
  https://github.com/fpco/stackage-cli/issues

license:             MIT
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton@fpcomplete.com
copyright:           2015 FP Complete Corporation

build-type:          Custom
cabal-version:       >=1.10
category: Development
extra-source-files:  README.md ChangeLog.md

source-repository head
  type:     git
  location: git://github.com/fpco/stackage-cli.git

library
  hs-source-dirs: src/
  exposed-modules:
      Stackage.CLI
  other-modules:
      SimpleOptions
    , Plugins
    , Plugins.Commands
  build-depends:
      base >=4.7 && <5
    , text
    , conduit
    , optparse-applicative
    , process
    , transformers
    , split
    , filepath
    , directory
    , hashable
    , unordered-containers
    , exceptions
    , optparse-simple >= 0.0.2
    , either
  default-language:    Haskell2010

executable stackage
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
  default-language:    Haskell2010

executable stk
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , stackage-cli
  default-language:    Haskell2010
