name:                stackage-cli
version:             0.1
synopsis:
  A CLI library for stackage commands
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Stackage.CLI
  other-modules:
      SimpleOptions
    , Module.Types
    , Module.IO
    , Module.Parser
    , Module
  build-depends:
      base >=4.7 && <4.8
    , text
    , conduit
    , optparse-applicative
    , process
    , transformers
  default-language:    Haskell2010

executable stackage
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8
    , stackage-cli

executable stk
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8
    , stackage-cli
