name:                stackage-init
version:             0.1
synopsis:
  Initializes a cabal.config via Stackage.
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Stackage.CLI.Init
  build-depends:
      base >= 4.7 && <4.8
    , stackage-cli
  default-language:    Haskell2010

executable stackage-init
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8
    , system-fileio >=0.3
    , optparse-applicative >=0.11
    , http-client >=0.4
    , bytestring >=0.10
    , stackage-init
  hs-source-dirs:      main
  default-language:    Haskell2010
