name:                stackage-purge
version:             0.1
synopsis:            Purges stackage stuff
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Stackage.CLI.Purge
  build-depends:
      base >= 4.7 && <4.8
    , stackage-cli
  default-language:    Haskell2010

executable stackage-purge
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8
    , stackage-purge >=0.1
    , system-fileio >=0.3
    , optparse-applicative >=0.11
    , process
    , text
  hs-source-dirs:      main
  default-language:    Haskell2010
