name:                stackage-upgrade
version:             0.1
synopsis:            Upgrade stackage stuff
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Stackage.CLI.Upgrade
  build-depends:
      base >=4.7 && <4.8
    , stackage-cli
  default-language:    Haskell2010

executable stackage-upgrade
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8
    , stackage-cli
    , process
    , text
  hs-source-dirs:      main
  default-language:    Haskell2010
